<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp">

        <EditText
            android:id="@+id/edit_text_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textAppearance="?android:textAppearanceMedium"
            android:theme="@style/ColorSwitchStyle" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_view_add_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_ripple"
        android:clickable="true"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/add_phone_from_contacts"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_add_calllog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_ripple"
        android:clickable="true"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/add_phone_from_hystory"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_view_add_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_ripple"
        android:clickable="true"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/text_ok"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textStyle="bold" />

</LinearLayout>